--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body{
     background-color: rgb(3, 0, 0);
     color: white;
+    padding: 0 10px;
 }
 header{
     font-size: 40px;
@@ -62,9 +63,9 @@ header{
   .main-check{
     display: flex;
     justify-content: space-around;    
-    align-items: center;
     padding: 50px;
     width: 100%;
+    align-items: center;
  }
  .main-name>h2{
     font-size: 60px;
@@ -105,18 +106,24 @@ button, button>a{
     }
 .about-image{
     display: flex;
-    gap: 10.7rem;
-    align-items: center;
+    gap: 2rem;
+    justify-content: center;
     font-size: 20px;
-    width: 1000px;
+    width: 100%;
     margin: 60px auto;
  }
    .image1{
     height: 100px;
-     border-radius: 100px; 
+    border-radius: 100px; 
     width: 100px;
     border: 1px solid rgb(54, 4, 4);
     padding: 10px;
+}
+.image11{
+  width: 80px;
+  height: 80px;
+  padding-top: 20px;
+  padding-left: 10px;
 }
 .what>h3{
     font-size: 30px;
@@ -126,9 +133,9 @@ button, button>a{
 }
 .whatt{
   display: flex;
-  gap: 10.1rem;
-  align-items: center;
-  padding: 0 300px;
+  gap: 5rem;
+  justify-content: center;
+  padding: 0 30px;
 }
 .sub-what{
   width:400px;
@@ -143,10 +150,10 @@ button, button>a{
   border-bottom: 6px solid green;
 }
 .sub-what >h4, .sub-what2 >h4{
-  margin-left: 25px;
-  font-size: 50px;
-  margin-top: 2px;
+  font-size: 35px;
+  margin-top: 30px;
   color: rgb(65, 137, 155);
+  padding-left: 10px;
 }
 .myskills{
   text-align: center;
@@ -156,10 +163,10 @@ button, button>a{
 .main-skill{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 12rem;
+  gap: 5rem;
   text-align: center;
   width:fit-content;
-  padding: 30px;
+  padding: 20px;
   margin: auto;
   font-size: 40px;
   background-color:rgb(10, 25, 26);
@@ -183,8 +190,8 @@ button, button>a{
 }
 .main-intouch{
   display: flex;
+  justify-content: center;
   gap: 3rem;
-  margin-left:400px;
 }
 .group1{
   border-bottom: 2px solid rgb(156, 98, 98);
@@ -195,14 +202,19 @@ button, button>a{
   font-size: 30px;
   line-height: 70px;
 }
-textarea{
+textarea {
   height: 100px;
   font-size: 30px;
   width: 44vw;
-  margin-left:450px;
-  margin-top: 41px;
   background-color:rgb(47, 64, 65) ;
 }
+.textarea{
+  display: flex;
+  justify-content: center;
+  margin-top: 5px;
+}
+
+
 #but{
   align-items: center;
   margin-left: 45%;
@@ -323,6 +335,7 @@ footer{
       .what{
         color: greenyellow;
       }
+      
       .whatt{ 
         display: grid;
         grid-template-columns: repeat(1,1fr);
@@ -394,13 +407,27 @@ footer{
        
        
     }
+    .main-check{
+      flex-direction: column-reverse; 
+      
+   }
     textarea{
       margin: 0 50px;
       width: 70%;
     }
     #but{
-      margin: 0 120px;
+      margin:10px 110px;
       
+    }
+    .image11{
+      width: 40px;
+      height: 40px;
+      
+    }
+    .sub-what >h4, .sub-what2 >h4{
+      font-size: 25px;
+      margin-top: 15px;
+      padding-left: 5px;
     }
     
   }
