--- a/style.css
+++ b/style.css
@@ -125,6 +125,9 @@ button, button>a{
   padding-top: 20px;
   padding-left: 10px;
 }
+.-what{
+   justify-content: center;
+}
 .what>h3{
     font-size: 30px;
 }
