--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ footer{
         height: 0px;
       }
       .nav > #nav-check:checked ~ .nav-links {
-        height: calc(100vh - 50px);
+        height: calc(60vh - 50px);
         overflow-y: auto;
       }
       .main-name{
@@ -308,20 +308,24 @@ footer{
     
       }
       .main-check{
+        padding: 0;
         display: grid;
+        grid-template-columns: repeat(2,1fr);
       }
       .main-name>h2,.main-name> p{
-        font-size: 30px;
+        font-size: 20px;
       }
      .but, .but>a,button, button>a{
         font-size: 20px;
+        margin: 0;
         padding: 2px;
+        
       }
       .imgg{
         width: 100%;
         height: auto;
         padding: 2px;
-        margin-top: 14px;
+        margin-top: 10px;
       }
       .main-about{
         font-size: 14px;
